# Golden-Goal

./: .gitignore  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WHITEPAPER.md  alter_db.js  goldengoal_manifesto.md  next.config.mjs  package-lock.json  package.json  schedule.json  tsconfig.json
.github/workflows/: ci.yml
audit/: pre_audit_report.md  sec3_audit_report.md
programs/golden-goal/: Cargo.toml
programs/golden_goal/src/: lib.rs
public/: vercel-test.txt
scratch/: run_live_scores_endpoint.js  test_volleyball_sync.js
scripts/: add_points.js  deploy.sh  make_transparent.js  setup-db.sh
src/: middleware.js  proxy.js
src/__tests__/: locking.test.js  rewards.test.js  whitelist.test.js
src/app/: globals.css  layout.js  page.js
src/app/admin/: page.js
src/app/api/debug-tx/: route.js
src/app/dashboard/: page.js
src/app/docs/: page.js
src/app/groups/: page.js
src/app/leaderboard/: page.js
src/app/markets/: page.js
src/app/onepager/: page.js
src/app/pitchdeck/: page.js
src/app/profile/: page.js
src/app/spin/: page.js
src/app/stake/: page.js
src/components/: CustomModal.jsx  Footer.jsx  Header.jsx  IntroAnimation.js  Maintenance.jsx  ReferralCapture.js  WalletContextProvider.jsx  WhitelistGuard.jsx  WorldCupMusicPlayer.jsx
src/components/backend_api/: lock.js  predictions.js  tests.ts  unlock.js
src/components/smart_contracts/: AnchorProgramSource.js  AnchorTestCases.js  audit_data.js  lib.rs
src/lib/: db.js  flags.js  golden-goal-sdk.ts  solana.js  whitelist.js  whitelist.ts
(+38 files in other folders)
